@@ -234,13 +234,15 @@ cdef class iterparse(_BaseParser):
     * load_dtd           - use DTD for parsing
     * no_network         - prevent network access
     * remove_blank_text  - discard blank text nodes
+    * remove_comments    - discard comments
     """
     cdef object _source
     cdef object _filename
     cdef readonly object root
     def __init__(self, source, events=("end",), tag=None,
                  attribute_defaults=False, dtd_validation=False,
-                 load_dtd=False, no_network=False, remove_blank_text=False):
+                 load_dtd=False, no_network=False, remove_blank_text=False,
+                 remove_comments=False):
         cdef _IterparseContext context
         cdef char* c_filename
         cdef int parse_options
@@ -257,7 +259,7 @@ cdef class iterparse(_BaseParser):
             c_filename = NULL
 
         self._source = source
-        _BaseParser.__init__(self, _IterparseContext)
+        _BaseParser.__init__(self, remove_comments, _IterparseContext)
 
         parse_options = _XML_DEFAULT_PARSE_OPTIONS
         if load_dtd:
